[package]
name = "aleo-pool-server"
version = "0.0.6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
db = [
    "deadpool-postgres",
    "tokio-postgres"
]

[dependencies]
#snarkvm = { path = "../../src/snarkVM" }
snarkvm = { git = "https://github.com/AleoNet/snarkVM.git", rev = "be171ce", features = ["test"] }
snarkvm-algorithms = { git = "https://github.com/AleoNet/snarkVM.git", rev = "be171ce" }
snarkvm-curves = { git = "https://github.com/AleoNet/snarkVM.git", rev = "be171ce" }
snarkvm-utilities = { git = "https://github.com/AleoNet/snarkVM.git", rev = "be171ce" }
snarkvm-ledger-narwhal-data = { git = "https://github.com/AleoNet/snarkVM.git", rev = "be171ce" }
snarkvm-ledger-puzzle-epoch = { git = "https://github.com/AleoNet/snarkVM.git", rev = "be171ce" }
#snarkvm = "0.9.13"
#snarkvm-algorithms = "0.9.13"
#snarkvm-curves = "0.9.13"
#snarkvm-utilities = "0.9.