[package]
name = "aleo-pool-server"
version = "0.0.6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
db = [
    "deadpool-postgres",
    "tokio-postgres"
]

[dependencies]
#snarkvm = { path = "../../src/snarkVM" }
snarkvm = { git = "https://github.com/AleoNet/snarkVM.git", rev = "be171ce", features = ["test"] }
snarkvm-algorithms = { git = "https://github.com/AleoNet/snarkVM.git", rev = "be171ce" }
snarkvm-curves = { git = "https://github.com/AleoNet/snarkVM.git", rev = "be171ce" }
snarkvm-utilities = { git = "https://github.com/AleoNet/snarkVM.git", rev = "be171ce" }
snarkvm-ledger-narwhal-data = { git = "https://github.com/AleoNet/snarkVM.git", rev = "be171ce" }
snarkvm-ledger-puzzle-epoch = { git = "https://github.com/AleoNet/snarkVM.git", rev = "be171ce" }
#snarkvm = "0.9.13"
#snarkvm-algorithms = "0.9.13"
#snarkvm-curves = "0.9.13"
#snarkvm-utilities = "0.9.13"
snarkos-account = { git = "https://github.com/AleoNet/snarkOS.git", branch = "mainnet" }
snarkos-node-router-messages = { git = "https://github.com/AleoNet/snarkOS.git", branch = "mainnet" }
tracing = "0.1.40"
tracing-log = "0.2.0"
futures = "0.3.30"
futures-util = "0.3.30"
rand = "0.8.5"
tokio-util = "0.7.11"
tokio-stream = "0.1.15"
dirs = "5.0.1"
bincode = "1.3.3"
anyhow = "1.0.86"
signal-hook = "0.3.17"
bytes = "1.7.1"
byteorder = "1.5.0"
warp = "0.3.7"
dotenv = "0.15.0"
json-rpc-types = "1.3.4"
semver = "1.0.23"
hex = "0.4.3"
rayon = "1.10.0"
num_cpus = "1.16.0"
flurry = "0.5.1"
savefile = "0.17.7"
savefile-derive = "0.17.7"

[dependencies.speedometer]
path = "./speedometer"

[dependencies.cache]
path = "./cache"

[dependencies.aleo-stratum]
path = "./stratum"

[dependencies.blake2]
version = "0.10.6"
default-features = false

[dependencies.tracing-subscriber]
v